# cat_upscaler

./: .gitignore  README.md  dataset_health_check.ipynb  downscaler.py  pyproject.toml  train.py
dataset_creation/: 640_1280_maker.ipynb  downscaled_dataset_maker.py  downscaled_dataset_maker2.ipynb  downscaled_dataset_maker3.py  downscaled_dataset_maker4.ipynb
image_processing/: image_cropper.py  image_renamer.ipynb
inference/: inference.ipynb  video_maker.ipynb
train/: train.py
