[tool.poetry]
name = "upscaler-train"
version = "0.1.0"
description = ""
authors = ["Matthew <matmigg0804@gmail.com>"]
readme = "README.md"
packages = [{include = "upscaler_train"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
