[tool.poetry]
name = "upscaler-train"
version = "0.1.0"
description = ""
authors = ["Matthew <matmigg0804@gmail.com>"]
readme = "README.md"
packages = [{include = "upscaler_train"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
torch = "1.13.1"  # We'll use the default PyTorch version
torchvision = "0.14.1"  # We'll let PyTorch handle the compatible torchvision version
torchaudio = "0.13.1"  # Similarly, let PyTorch handle this

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
